--- a/Packs/CommonScripts/Scripts/script-GeneratePassword.yml
+++ b/Packs/CommonScripts/Scripts/script-GeneratePassword.yml
@@ -16,7 +16,7 @@ script: |+
   };
 
   // randomize our selected charaters
-  function randomSort(a, b) {
+  function randomSort() {
       return Math.random() > 0.5 ? -1 : 1;
   }
 
