--- a/Packs/CommonScripts/Scripts/script-GetTime.yml
+++ b/Packs/CommonScripts/Scripts/script-GetTime.yml
@@ -73,7 +73,7 @@ script: |-
 
 
           default:
-              throw 'Unsupported date format: '+args.dateFormat
+              throw 'Unsupported date format: '+args.dateFormat;
       }
   }
 
