--- a/Packs/CommonScripts/Scripts/script-DeleteConext.yml
+++ b/Packs/CommonScripts/Scripts/script-DeleteConext.yml
@@ -66,7 +66,7 @@ script: |
       // delete key in a specific index
       var index = parseInt(args.index);
       if (isNaN(index)) {
-          return errorEntry("Invalid index " + args.index)
+          return errorEntry("Invalid index " + args.index);
       }
       var contextVal = invContext[args.key];
       if (!contextVal) {
@@ -77,14 +77,14 @@ script: |
       }
 
       if (index < 0 || index >= contextVal.length) {
-          return errorEntry("Index out of range " + args.index)
+          return errorEntry("Index out of range " + args.index);
       }
 
       // splice is not supported currently
       var newArr = [];
       for (var i = 0; i < contextVal.length; i++) {
           if (i !== index) {
-              newArr.push(contextVal[i])
+              newArr.push(contextVal[i]);
           }
       }
 
