--- a/Packs/CommonScripts/Scripts/script-GenerateSummaryReports.yml
+++ b/Packs/CommonScripts/Scripts/script-GenerateSummaryReports.yml
@@ -17,7 +17,7 @@ script: |
       var reportEntries =  executeCommand("generateSummaryReport", {name: args.name, type: args.type, incidentId: id});
       res = res.concat(reportEntries);
       if(reportEntries[0] && reportEntries[0].File) {
-          ec.SummaryReports.push({IncidentID: id, ReportName: args.name, File: reportEntries[0].File, FileID: reportEntries[0].FileID})
+          ec.SummaryReports.push({IncidentID: id, ReportName: args.name, File: reportEntries[0].File, FileID: reportEntries[0].FileID});
       }
       wait(1); //required to avoid generated file name conflicts
   });
