--- a/Packs/CommonScripts/Scripts/script-TimeStampToDate.yml
+++ b/Packs/CommonScripts/Scripts/script-TimeStampToDate.yml
@@ -3,11 +3,11 @@ commonfields:
   version: -1
 name: TimeStampToDate
 script: |-
-  var value = parseInt(args.value)
+  var value = parseInt(args.value);
 
   // Add miliseconds if needed
   if (value < 10000000000) {
-      value *= 1000
+      value *= 1000;
   }
 
   var date =  new Date(value);
