--- a/Packs/CommonScripts/Scripts/script-generateSummaryReport.yml
+++ b/Packs/CommonScripts/Scripts/script-generateSummaryReport.yml
@@ -5,7 +5,7 @@ fromversion: 3.5.0
 name: GenerateInvestigationSummaryReport
 comment: "A script to generate investigation summary report in an automated way\nCan be used in post-processing flow as well."
 script: 'return executeCommand("generateSummaryReport", {name: args.name, type: args.type,
-  incidentId: args.incidentId})'
+  incidentId: args.incidentId});'
 type: javascript
 tags:
 - post-processing
