--- a/Packs/CommonScripts/TestPlaybooks/playbook-TestExtractHTMLTables.yml
+++ b/Packs/CommonScripts/TestPlaybooks/playbook-TestExtractHTMLTables.yml
@@ -5,10 +5,10 @@ starttaskid: "0"
 tasks:
   "0":
     id: "0"
-    taskid: 27097a72-8399-4e27-85f5-897c27106ce3
+    taskid: 282e8a27-9a6c-4018-8cbe-c071d2a0c286
     type: start
     task:
-      id: 27097a72-8399-4e27-85f5-897c27106ce3
+      id: 282e8a27-9a6c-4018-8cbe-c071d2a0c286
       version: -1
       name: ""
       iscommand: false
@@ -24,12 +24,17 @@ tasks:
           "y": 50
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "1":
     id: "1"
-    taskid: 4447dd62-1e51-483b-802f-202205b781f4
+    taskid: ebe2c372-b615-4bdb-8682-8ca66ca0906d
     type: regular
     task:
-      id: 4447dd62-1e51-483b-802f-202205b781f4
+      id: ebe2c372-b615-4bdb-8682-8ca66ca0906d
       version: -1
       name: DeleteContext
       description: Delete field from context
@@ -52,12 +57,17 @@ tasks:
           "y": 195
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "2":
     id: "2"
-    taskid: 6cc1640f-24df-4b6a-8cf2-5d2daaac5c57
+    taskid: 0e147bf0-2073-45a9-85f9-3b43a4a99e8d
     type: regular
     task:
-      id: 6cc1640f-24df-4b6a-8cf2-5d2daaac5c57
+      id: 0e147bf0-2073-45a9-85f9-3b43a4a99e8d
       version: -1
       name: ExtractHTMLTables with single one column table with header
       description: |-
@@ -85,12 +95,17 @@ tasks:
           "y": 370
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "3":
     id: "3"
-    taskid: 9f902e22-b34e-4559-8238-8752c1afda3e
+    taskid: 6b9a852b-bc6f-42a0-870a-bb3bd89770bc
     type: condition
     task:
-      id: 9f902e22-b34e-4559-8238-8752c1afda3e
+      id: 6b9a852b-bc6f-42a0-870a-bb3bd89770bc
       version: -1
       name: Both values exist in array
       description: Check if a given value exists in the context. Will return 'no'
@@ -115,36 +130,17 @@ tasks:
           "y": 545
         }
       }
-  "4":
-    id: "4"
-    taskid: 4861114d-746b-4d17-8a2f-3a730474a3eb
-    type: regular
-    task:
-      id: 4861114d-746b-4d17-8a2f-3a730474a3eb
-      version: -1
-      name: Close
-      scriptName: CloseInvestigation
-      type: regular
-      iscommand: false
-      brand: ""
-    scriptarguments:
-      notes:
-        simple: All good
-      reason: {}
-    separatecontext: false
-    view: |-
-      {
-        "position": {
-          "x": 592.5,
-          "y": 2295
-        }
-      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "5":
     id: "5"
-    taskid: 50da60bb-61ac-4ad6-8f89-8f43eb32cb9f
+    taskid: f8213811-9e81-42fb-80c3-382c5b7c55cc
     type: regular
     task:
-      id: 50da60bb-61ac-4ad6-8f89-8f43eb32cb9f
+      id: f8213811-9e81-42fb-80c3-382c5b7c55cc
       version: -1
       name: Bad
       scriptName: Print
@@ -161,12 +157,17 @@ tasks:
           "y": 2295
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "6":
     id: "6"
-    taskid: f3996270-b954-45af-8c5a-2aa642158c5d
+    taskid: daf05e8c-cd8f-4bf5-863a-56d1dedc9044
     type: regular
     task:
-      id: f3996270-b954-45af-8c5a-2aa642158c5d
+      id: daf05e8c-cd8f-4bf5-863a-56d1dedc9044
       version: -1
       name: DeleteContext
       scriptName: DeleteContext
@@ -188,12 +189,17 @@ tasks:
           "y": 720
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "7":
     id: "7"
-    taskid: 6c97d562-b5ba-4ae3-8247-dff72f8e60f4
+    taskid: 4fd1bb2d-7ee2-40ee-8924-d4e0147a2ef1
     type: regular
     task:
-      id: 6c97d562-b5ba-4ae3-8247-dff72f8e60f4
+      id: 4fd1bb2d-7ee2-40ee-8924-d4e0147a2ef1
       version: -1
       name: ExtractHTMLTables with single one column table without header
       description: |-
@@ -221,12 +227,17 @@ tasks:
           "y": 895
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "8":
     id: "8"
-    taskid: 5b223b46-ef77-4705-8235-ed9f1914284b
+    taskid: c0f1766f-0fd2-427c-8e36-037f8d816411
     type: condition
     task:
-      id: 5b223b46-ef77-4705-8235-ed9f1914284b
+      id: c0f1766f-0fd2-427c-8e36-037f8d816411
       version: -1
       name: Both values exist in array
       description: Check if a given value exists in the context. Will return 'no'
@@ -251,12 +262,17 @@ tasks:
           "y": 1070
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "9":
     id: "9"
-    taskid: b00906ec-8c99-4640-8e94-b27ab0d4d6ad
+    taskid: cfc7d163-9519-4efb-8147-bbc433eda996
     type: regular
     task:
-      id: b00906ec-8c99-4640-8e94-b27ab0d4d6ad
+      id: cfc7d163-9519-4efb-8147-bbc433eda996
       version: -1
       name: DeleteContext
       scriptName: DeleteContext
@@ -278,12 +294,17 @@ tasks:
           "y": 1245
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "10":
     id: "10"
-    taskid: b8d9b854-ff36-42b8-8b13-a246e05eb894
+    taskid: e5515ca6-630c-4f00-8807-30391ba07fbd
     type: regular
     task:
-      id: b8d9b854-ff36-42b8-8b13-a246e05eb894
+      id: e5515ca6-630c-4f00-8807-30391ba07fbd
       version: -1
       name: ExtractHTMLTables with two columns and no headers
       description: |-
@@ -311,12 +332,17 @@ tasks:
           "y": 1420
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "11":
     id: "11"
-    taskid: f84d4e7d-ba50-4356-84a5-2b1d6bfe975b
+    taskid: 8cf6edc6-283f-4d04-8591-d92efc197c8e
     type: condition
     task:
-      id: f84d4e7d-ba50-4356-84a5-2b1d6bfe975b
+      id: 8cf6edc6-283f-4d04-8591-d92efc197c8e
       version: -1
       name: Both objects exist
       description: Check if a given value exists in the context. Will return 'no'
@@ -341,12 +367,17 @@ tasks:
           "y": 1595
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "12":
     id: "12"
-    taskid: 1d36419e-6dec-413b-8a0c-1cfe0821c9be
+    taskid: 36080405-8b93-42e0-80c9-02c4346c5090
     type: regular
     task:
-      id: 1d36419e-6dec-413b-8a0c-1cfe0821c9be
+      id: 36080405-8b93-42e0-80c9-02c4346c5090
       version: -1
       name: DeleteContext
       scriptName: DeleteContext
@@ -368,12 +399,17 @@ tasks:
           "y": 1770
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "13":
     id: "13"
-    taskid: e2a761e1-7877-458f-8efd-a1387983208b
+    taskid: 04404071-e497-48bc-83c2-f54638ef0220
     type: regular
     task:
-      id: e2a761e1-7877-458f-8efd-a1387983208b
+      id: 04404071-e497-48bc-83c2-f54638ef0220
       version: -1
       name: ExtractHTMLTables with two columns and headers
       description: |-
@@ -401,12 +437,17 @@ tasks:
           "y": 1945
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
   "14":
     id: "14"
-    taskid: 2d78f082-e841-47f2-86e1-0e6d59f8d90f
+    taskid: 434bb18f-db5a-4e0b-8c1b-e2cfd706d0ed
     type: condition
     task:
-      id: 2d78f082-e841-47f2-86e1-0e6d59f8d90f
+      id: 434bb18f-db5a-4e0b-8c1b-e2cfd706d0ed
       version: -1
       name: All objects exist
       description: Check if a given value exists in the context. Will return 'no'
@@ -418,8 +459,6 @@ tasks:
     nexttasks:
       '#default#':
       - "5"
-      "yes":
-      - "4"
     scriptarguments:
       value:
         simple: ${HTMLTables(val.kuku == 'a' && val.kaka == '1' || val.kuku == 'b'
@@ -432,13 +471,18 @@ tasks:
           "y": 2120
         }
       }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
 view: |-
   {
     "linkLabelsPosition": {},
     "paper": {
       "dimensions": {
         "height": 2340,
-        "width": 922.5,
+        "width": 912.5,
         "x": 50,
         "y": 50
       }
