--- a/Packs/GoogleSafeBrowsing/TestPlaybooks/playbook-Google_Safe_Browsing_Test.yml
+++ b/Packs/GoogleSafeBrowsing/TestPlaybooks/playbook-Google_Safe_Browsing_Test.yml
@@ -3,189 +3,250 @@ version: -1
 name: Google Safe Browsing Test
 description: Checking Google Safe Browsing integration by running it on both malicious
   and non-malicious URLs and checking the results
-starttaskid: '0'
+starttaskid: "0"
 tasks:
-  '0':
-    id: '0'
-    taskid: 796e6d3d-218d-4bf4-80fe-1c08c23e11e5
+  "0":
+    id: "0"
+    taskid: 0b9ce673-5a1a-46f2-8346-a8fc0f78f041
     type: start
     task:
-      id: 796e6d3d-218d-4bf4-80fe-1c08c23e11e5
+      id: 0b9ce673-5a1a-46f2-8346-a8fc0f78f041
       version: -1
-      name: ''
+      name: ""
       iscommand: false
-      brand: ''
-      description: ''
+      brand: ""
     nexttasks:
       '#none#':
-      - '2'
+      - "2"
     separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 50\n  }\n}"
-  '2':
-    id: '2'
-    taskid: ae2d2096-bb32-4588-8888-c0546ec9c7bf
+    view: |-
+      {
+        "position": {
+          "x": 450,
+          "y": 50
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "2":
+    id: "2"
+    taskid: a1981566-3992-435d-86a1-d35b01453069
     type: regular
     task:
-      id: ae2d2096-bb32-4588-8888-c0546ec9c7bf
+      id: a1981566-3992-435d-86a1-d35b01453069
       version: -1
       name: Check non-malicious URL
       script: GoogleSafeBrowsing|||url
       type: regular
       iscommand: true
       brand: GoogleSafeBrowsing
-      description: ''
     nexttasks:
       '#none#':
-      - '3'
+      - "3"
     scriptarguments:
       url:
         simple: ${inputs.Non malicious URL}
     separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 185\n  }\n}"
-  '3':
-    id: '3'
-    taskid: d6749a43-d9bb-43d4-8e38-627148734eea
+    view: |-
+      {
+        "position": {
+          "x": 450,
+          "y": 185
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "3":
+    id: "3"
+    taskid: 976c293d-6e2f-4462-824c-e38a7e888ff6
     type: condition
     task:
-      id: d6749a43-d9bb-43d4-8e38-627148734eea
+      id: 976c293d-6e2f-4462-824c-e38a7e888ff6
       version: -1
       name: Check if found malicious
       type: condition
       iscommand: false
-      brand: ''
-      description: ''
+      brand: ""
     nexttasks:
       '#default#':
-      - '4'
-      yes:
-      - '9'
+      - "4"
+      "yes":
+      - "9"
     scriptarguments:
       value: {}
     separatecontext: false
     conditions:
-    - label: yes
+    - label: "yes"
       condition:
-      - - operator: general.isExists
+      - - operator: isExists
           left:
             value:
               simple: URL.Malicious
             iscontext: true
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 346\n  }\n}"
-  '4':
-    id: '4'
-    taskid: 4c5718ec-0a32-4a33-8980-2eeffb9ad1d4
+    view: |-
+      {
+        "position": {
+          "x": 450,
+          "y": 346
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "4":
+    id: "4"
+    taskid: fe30d613-13db-448c-8a19-6c5402ef42d6
     type: regular
     task:
-      id: 4c5718ec-0a32-4a33-8980-2eeffb9ad1d4
+      id: fe30d613-13db-448c-8a19-6c5402ef42d6
       version: -1
       name: Check malicious URL
       script: GoogleSafeBrowsing|||url
       type: regular
       iscommand: true
       brand: GoogleSafeBrowsing
-      description: ''
     nexttasks:
       '#none#':
-      - '7'
+      - "7"
     scriptarguments:
       url:
         simple: ${inputs.Malicious URL}
     separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 619\n  }\n}"
-  '7':
-    id: '7'
-    taskid: fc9048f1-5697-48c8-8679-9acd4339484a
+    view: |-
+      {
+        "position": {
+          "x": 450,
+          "y": 619
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "7":
+    id: "7"
+    taskid: 5fc3b4aa-ad30-4221-85dd-d0868719d122
     type: condition
     task:
-      id: fc9048f1-5697-48c8-8679-9acd4339484a
+      id: 5fc3b4aa-ad30-4221-85dd-d0868719d122
       version: -1
       name: Check if found malicious
       type: condition
       iscommand: false
-      brand: ''
-      description: ''
+      brand: ""
     nexttasks:
       '#default#':
-      - '10'
-      yes:
-      - '8'
+      - "10"
     separatecontext: false
     conditions:
-    - label: yes
+    - label: "yes"
       condition:
-      - - operator: general.isExists
+      - - operator: isExists
           left:
             value:
               simple: URL.Malicious
             iscontext: true
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 794\n  }\n}"
-  '8':
-    id: '8'
-    taskid: 70ccb8d0-2ef5-4d59-872a-2efe223c19fd
+    view: |-
+      {
+        "position": {
+          "x": 450,
+          "y": 794
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "9":
+    id: "9"
+    taskid: aebdf67a-2128-437d-8f6f-906d4d677503
     type: regular
     task:
-      id: 70ccb8d0-2ef5-4d59-872a-2efe223c19fd
-      version: -1
-      name: Closing incident
-      scriptName: CloseInvestigation
-      type: regular
-      iscommand: false
-      brand: ''
-      description: ''
-    scriptarguments:
-      notes: {}
-      reason: {}
-    separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 450,\n    \"y\": 1121\n  }\n}"
-  '9':
-    id: '9'
-    taskid: 24eca54e-770b-422d-8acd-c060b3ff4253
-    type: regular
-    task:
-      id: 24eca54e-770b-422d-8acd-c060b3ff4253
+      id: aebdf67a-2128-437d-8f6f-906d4d677503
       version: -1
       name: FAIL - False Positive
-      scriptName: RaiseError
+      script: RaiseError
       type: regular
       iscommand: false
-      brand: ''
-      description: ''
+      brand: ""
     scriptarguments:
       error:
         simple: expected ${inputs.Non malicious URL} to not be malicious
     separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 889,\n    \"y\": 524\n  }\n}"
-  '10':
-    id: '10'
-    taskid: 7e6ad882-22e0-431a-8970-81489de71064
+    view: |-
+      {
+        "position": {
+          "x": 889,
+          "y": 524
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+  "10":
+    id: "10"
+    taskid: d67e1e1e-bfc0-4255-816b-2e78d937acc3
     type: regular
     task:
-      id: 7e6ad882-22e0-431a-8970-81489de71064
+      id: d67e1e1e-bfc0-4255-816b-2e78d937acc3
       version: -1
       name: FAIL - False Positive
-      scriptName: RaiseError
+      script: RaiseError
       type: regular
       iscommand: false
-      brand: ''
-      description: ''
+      brand: ""
     scriptarguments:
       error:
         simple: expected ${inputs.Non malicious URL} to not be malicious
     separatecontext: false
-    view: "{\n  \"position\": {\n    \"x\": 889,\n    \"y\": 979\n  }\n}"
-view: "{\n  \"linkLabelsPosition\": {},\n  \"paper\": {\n    \"dimensions\": {\n \
-  \     \"height\": 1166,\n      \"width\": 819,\n      \"x\": 450,\n      \"y\":\
-  \ 50\n    }\n  }\n}"
+    view: |-
+      {
+        "position": {
+          "x": 889,
+          "y": 979
+        }
+      }
+    note: false
+    timertriggers: []
+    ignoreworker: false
+    skipunavailable: false
+    quietmode: 0
+view: |-
+  {
+    "linkLabelsPosition": {},
+    "paper": {
+      "dimensions": {
+        "height": 1024,
+        "width": 819,
+        "x": 450,
+        "y": 50
+      }
+    }
+  }
 inputs:
 - key: Malicious URL
   value:
     simple: http://testsafebrowsing.appspot.com/apiv4/ANY_PLATFORM/MALWARE/URL/
   required: false
-  description: ''
+  description: ""
+  playbookInputQuery: null
 - key: Non malicious URL
   value:
     simple: http://google.com
   required: false
-  description: ''
+  description: ""
+  playbookInputQuery: null
 outputs: []
 fromversion: 5.0.0
