--- a/Packs/MxToolBox/TestPlaybooks/playbook-MxToolbox_test.yml
+++ b/Packs/MxToolBox/TestPlaybooks/playbook-MxToolbox_test.yml
@@ -5,10 +5,10 @@ starttaskid: "0"
 tasks:
   "0":
     id: "0"
-    taskid: 136c4de9-adee-4273-8299-b8b4ab58cd52
+    taskid: 1981f888-e6fc-45e5-8dd1-4edabe4f41d1
     type: start
     task:
-      id: 136c4de9-adee-4273-8299-b8b4ab58cd52
+      id: 1981f888-e6fc-45e5-8dd1-4edabe4f41d1
       version: -1
       name: ""
       iscommand: false
@@ -20,7 +20,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 50
         }
       }
@@ -31,10 +31,10 @@ tasks:
     quietmode: 0
   "1":
     id: "1"
-    taskid: 5582a4f7-c435-4ab3-8543-a8def2c9d13b
+    taskid: 9a22182c-3af1-4e25-8691-7e9c9e74803e
     type: regular
     task:
-      id: 5582a4f7-c435-4ab3-8543-a8def2c9d13b
+      id: 9a22182c-3af1-4e25-8691-7e9c9e74803e
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -55,7 +55,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 195
         }
       }
@@ -66,10 +66,10 @@ tasks:
     quietmode: 0
   "2":
     id: "2"
-    taskid: bef3476d-5e36-4a43-8314-173c6d248da1
+    taskid: 916eea3b-6ce0-42c1-87e2-6d3989d51456
     type: regular
     task:
-      id: bef3476d-5e36-4a43-8314-173c6d248da1
+      id: 916eea3b-6ce0-42c1-87e2-6d3989d51456
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -90,7 +90,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 370
         }
       }
@@ -101,10 +101,10 @@ tasks:
     quietmode: 0
   "3":
     id: "3"
-    taskid: ab67ffc2-667b-4be6-8d60-373407b192cf
+    taskid: 1d3fb0fd-705f-42ee-811f-6f2fbfc98fe7
     type: regular
     task:
-      id: ab67ffc2-667b-4be6-8d60-373407b192cf
+      id: 1d3fb0fd-705f-42ee-811f-6f2fbfc98fe7
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -125,7 +125,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 545
         }
       }
@@ -136,10 +136,10 @@ tasks:
     quietmode: 0
   "4":
     id: "4"
-    taskid: ccf16577-ac2a-449c-8e76-96ba1e8dcef0
+    taskid: 71c6f128-2cd4-4119-8b49-ff4fae71ce7e
     type: regular
     task:
-      id: ccf16577-ac2a-449c-8e76-96ba1e8dcef0
+      id: 71c6f128-2cd4-4119-8b49-ff4fae71ce7e
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -160,7 +160,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 720
         }
       }
@@ -171,10 +171,10 @@ tasks:
     quietmode: 0
   "5":
     id: "5"
-    taskid: 490fc374-756e-443b-8fb3-74293b8d1a80
+    taskid: 24a5a9b5-fb77-4855-8992-467b7d0cfc03
     type: regular
     task:
-      id: 490fc374-756e-443b-8fb3-74293b8d1a80
+      id: 24a5a9b5-fb77-4855-8992-467b7d0cfc03
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -195,7 +195,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 895
         }
       }
@@ -206,10 +206,10 @@ tasks:
     quietmode: 0
   "6":
     id: "6"
-    taskid: b1d8ca06-a2dc-4c7a-82f9-44c24f0d96dd
+    taskid: 5d24591d-bb6d-4e27-8f47-6e8d26d1c1ac
     type: regular
     task:
-      id: b1d8ca06-a2dc-4c7a-82f9-44c24f0d96dd
+      id: 5d24591d-bb6d-4e27-8f47-6e8d26d1c1ac
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -230,7 +230,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 1070
         }
       }
@@ -241,10 +241,10 @@ tasks:
     quietmode: 0
   "7":
     id: "7"
-    taskid: 7d23483f-ff42-467e-8fe5-8bbc7d867845
+    taskid: 7587601b-bf52-4b9b-86ec-2b7f748bc94b
     type: regular
     task:
-      id: 7d23483f-ff42-467e-8fe5-8bbc7d867845
+      id: 7587601b-bf52-4b9b-86ec-2b7f748bc94b
       version: -1
       name: mxtoolbox
       description: Run any supported command on the mxtoolbox API
@@ -265,7 +265,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 1245
         }
       }
@@ -276,19 +276,17 @@ tasks:
     quietmode: 0
   "9":
     id: "9"
-    taskid: 70e517c3-74ac-4fbd-892a-9944ec5115cb
+    taskid: d2bf1694-35db-4286-8d62-479442f7434e
     type: condition
     task:
-      id: 70e517c3-74ac-4fbd-892a-9944ec5115cb
+      id: d2bf1694-35db-4286-8d62-479442f7434e
       version: -1
       name: Exists errors?
-      script: Exists
+      scriptName: Exists
       type: condition
       iscommand: false
       brand: ""
     nexttasks:
-      "no":
-      - "12"
       "yes":
       - "11"
     scriptarguments:
@@ -298,7 +296,7 @@ tasks:
     view: |-
       {
         "position": {
-          "x": 265,
+          "x": 50,
           "y": 1420
         }
       }
@@ -309,13 +307,13 @@ tasks:
     quietmode: 0
   "11":
     id: "11"
-    taskid: 14b04ad2-9d29-4a4e-8937-8aeb9d6d7893
+    taskid: f3de9df0-d74a-4c14-8784-a69e1873c8e6
     type: regular
     task:
-      id: 14b04ad2-9d29-4a4e-8937-8aeb9d6d7893
+      id: f3de9df0-d74a-4c14-8784-a69e1873c8e6
       version: -1
       name: Print failures
-      script: ToTable
+      scriptName: ToTable
       type: regular
       iscommand: false
       brand: ""
@@ -324,36 +322,6 @@ tasks:
       data:
         simple: ${MXToolbox.Errors}
       title: {}
-    separatecontext: false
-    view: |-
-      {
-        "position": {
-          "x": 480,
-          "y": 1595
-        }
-      }
-    note: false
-    timertriggers: []
-    ignoreworker: false
-    skipunavailable: false
-    quietmode: 0
-  "12":
-    id: "12"
-    taskid: e99092da-b540-4f8c-8528-38942c383b12
-    type: regular
-    task:
-      id: e99092da-b540-4f8c-8528-38942c383b12
-      version: -1
-      name: Close
-      script: CloseInvestigation
-      type: regular
-      iscommand: false
-      brand: ""
-    scriptarguments:
-      notes:
-        simple: All good
-      reason:
-        simple: Sababa
     separatecontext: false
     view: |-
       {
@@ -373,7 +341,7 @@ view: |-
     "paper": {
       "dimensions": {
         "height": 1640,
-        "width": 810,
+        "width": 380,
         "x": 50,
         "y": 50
       }
