--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,20 +128,9 @@ jobs:
             python3 -m pytest ./Tests/Marketplace/Tests/search_and_install_packs_test.py -v
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ;
-              then
-                  if [ $pytest_exit_code -ne 0 ] ; then
-                    echo "Infrastructure testing - pytest" >> $CIRCLE_ARTIFACTS/task_report.txt
-                  fi
-
                   python3 -m pylint --errors-only ./Tests
-                  pylint_exit_code=$?
+                  python3 -m pylint --errors-only ./Utils
 
-                  if [ $pylint_exit_code -ne 0 ] ; then
-                    echo "Infrastructure testing - pylint" >> $CIRCLE_ARTIFACTS/task_report.txt
-                  fi
-
-                let "exit_code = $flake8_exit_code + $validate_exit_code"
-                exit $exit_code
             fi
       - run:
           name: Validate Files and Yaml
