--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,7 @@ jobs:
             python3 -m pytest ./Tests/Marketplace/Tests/upload_packs_test.py -v
             python3 -m pytest ./Tests/Marketplace/Tests/search_and_install_packs_test.py -v
 
-            if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ;
+            if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   python3 -m pylint --errors-only ./Tests
                   python3 -m pylint --errors-only ./Utils
 
