--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,9 @@ jobs:
                   pylint_test_result=$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk)
                   pylint_utils_result=$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk)
 
+                  echo $pylint_test_result
+                  echo $pylint_utils_result
+
                   if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
                       echo $pylint_test_result
                       echo $pylint_utils_result
