--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,18 +129,15 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-                  pylint_test_result=$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk)
-                  pylint_utils_result=$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk)
-
-                  echo $pylint_test_result
-                  echo $pylint_utils_result
+                  pylint_test_result=$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk) | echo
+                  pylint_utils_result=$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk) | echo
 
                   if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
-                      echo $pylint_test_result
-                      echo $pylint_utils_result
+                      echo Pylint exit code on Test directory: $pylint_test_result
+                      echo Pylint exit code on Utils directory:$pylint_utils_result
                       exit 1
                   fi
-                  exit 0
+#                  exit 0
             fi
       - run:
           name: Validate Files and Yaml
