--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,7 +132,10 @@ jobs:
                   pylint_test_result=$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk) | echo
                   pylint_utils_result=$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk) | echo
 
-                  if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
+                  echo Pylint exit code on Test directory: $pylint_test_result
+                  echo Pylint exit code on Utils directory:$pylint_utils_result
+
+                  if [ $pylint_test_result -ne 0 ] || [ $pylint_utils_result -ne 0] ; then
                       echo Pylint exit code on Test directory: $pylint_test_result
                       echo Pylint exit code on Utils directory:$pylint_utils_result
                       exit 1
@@ -251,37 +254,37 @@ jobs:
 #                exit 0
 #            fi
 #            python3 ./Tests/Marketplace/packs_dependencies.py -i ./Tests/id_set.json -o $CIRCLE_ARTIFACTS/packs_dependencies.json
-#      - run:
-#          name: Run Unit Testing and Lint
-#          when: always
-#          no_output_timeout: 5h
-#          command: |
-#            if [ -n "${INSTANCE_TESTS}" ] || [ $CIRCLE_NODE_INDEX -ne 1 ] ;
-#              then
-#                echo "Skipping - unit tests are running only in container number 1"
-#                exit 0
-#            fi
-#            echo "demisto-sdk version: $(demisto-sdk --version)"
-#            echo "mypy version: $(mypy --version)"
-#            echo "flake8 py2 version: $(python2 -m flake8 --version)"
-#            echo "flake8 py3 version: $(python3 -m flake8 --version)"
-#            echo "bandit py2 version: $(python2 -m bandit --version 2>&1)"
-#            echo "bandit py3 version: $(python3 -m bandit --version 2>&1)"
-#            echo "vulture py2 version: $(python2 -m vulture --version) 2>&1"
-#            echo "vulture py3 version: $(python3 -m vulture --version) 2>&1"
-#            SHOULD_LINT_ALL=$(./Tests/scripts/should_lint_all.sh)
-#            mkdir ./unit-tests
-#            if [ -n "$SHOULD_LINT_ALL" ]; then
-#              echo -e  "----------\nLinting all because:\n${SHOULD_LINT_ALL}\n----------"
-#              demisto-sdk lint -p 8 -a -q --test-xml ./unit-tests --log-path ./artifacts --failure-report ./artifacts
-#            else
-#              demisto-sdk lint -p 8 -g -v --test-xml ./unit-tests --log-path ./artifacts --failure-report ./artifacts
-#            fi
-#      - store_test_results:
-#          path: ./unit-tests
-#      - store_artifacts:
-#          path: artifacts
-#          destination: artifacts
+      - run:
+          name: Run Unit Testing and Lint
+          when: always
+          no_output_timeout: 5h
+          command: |
+            if [ -n "${INSTANCE_TESTS}" ] || [ $CIRCLE_NODE_INDEX -ne 1 ] ;
+              then
+                echo "Skipping - unit tests are running only in container number 1"
+                exit 0
+            fi
+            echo "demisto-sdk version: $(demisto-sdk --version)"
+            echo "mypy version: $(mypy --version)"
+            echo "flake8 py2 version: $(python2 -m flake8 --version)"
+            echo "flake8 py3 version: $(python3 -m flake8 --version)"
+            echo "bandit py2 version: $(python2 -m bandit --version 2>&1)"
+            echo "bandit py3 version: $(python3 -m bandit --version 2>&1)"
+            echo "vulture py2 version: $(python2 -m vulture --version) 2>&1"
+            echo "vulture py3 version: $(python3 -m vulture --version) 2>&1"
+            SHOULD_LINT_ALL=$(./Tests/scripts/should_lint_all.sh)
+            mkdir ./unit-tests
+            if [ -n "$SHOULD_LINT_ALL" ]; then
+              echo -e  "----------\nLinting all because:\n${SHOULD_LINT_ALL}\n----------"
+              demisto-sdk lint -p 8 -a -q --test-xml ./unit-tests --log-path ./artifacts --failure-report ./artifacts
+            else
+              demisto-sdk lint -p 8 -g -v --test-xml ./unit-tests --log-path ./artifacts --failure-report ./artifacts
+            fi
+      - store_test_results:
+          path: ./unit-tests
+      - store_artifacts:
+          path: artifacts
+          destination: artifacts
 #      - run:
 #          name: Verify Base Branch for Contribution
 #          when: always
