--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,7 @@ jobs:
                   echo Pylint exit code on Test directory: $pylint_test_result
                   echo Pylint exit code on Utils directory:$pylint_utils_result
 
-                  if [ $pylint_test_result -ne 0 ] || [ $pylint_utils_result -ne 0] ; then
+                  if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
                       echo Pylint exit code on Test directory: $pylint_test_result
                       echo Pylint exit code on Utils directory:$pylint_utils_result
                       exit 1
@@ -274,7 +274,7 @@ jobs:
             echo "vulture py3 version: $(python3 -m vulture --version) 2>&1"
             SHOULD_LINT_ALL=$(./Tests/scripts/should_lint_all.sh)
             mkdir ./unit-tests
-            if [ -n "$SHOULD_LINT_ALL" ] || [ -n "DEMISTO_SDK_NIGHTLY" ] ; then
+            if [ -n "$SHOULD_LINT_ALL" ] ; then
               echo -e  "----------\nLinting all because:\n${SHOULD_LINT_ALL}\n----------"
               demisto-sdk lint -p 8 -a -q --test-xml ./unit-tests --log-path ./artifacts --failure-report ./artifacts
             else
