--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,7 +129,7 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk | cat)"
+                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk | cat)"
             fi
       - run:
           name: Validate Files and Yaml
