--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,8 @@ jobs:
           name: Infrastructure testing
           when: always
           command: |
+            set pipefail -e
+
             if [ -n "${INSTANCE_TESTS}" ] || [ $CIRCLE_NODE_INDEX -ne 0 ] ;
               then
                 echo "Skipping - not running in INSTANCE_TESTS build or unit-tests container"
@@ -129,7 +131,17 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
+                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk | cat)"
                   pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk | cat)"
+
+                  echo Pylint exit code on Test directory: $pylint_test_result
+                  echo Pylint exit code on Utils directory: $pylint_utils_result
+
+                  if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
+                      echo Pylint exit code on Test directory: $pylint_test_result
+                      echo Pylint exit code on Utils directory:$pylint_utils_result
+                      exit 1
+                  fi
             fi
       - run:
           name: Validate Files and Yaml
