--- a/Packs/FeedAutofocus/Integrations/FeedAutofocus/FeedAutofocus.yml
+++ b/Packs/FeedAutofocus/Integrations/FeedAutofocus/FeedAutofocus.yml
@@ -99,7 +99,7 @@ configuration:
   name: proxy
   required: false
   type: 8
-description: Use the AutoFocus Feeds integration to fetch indicators from AutoFocus.
+description: Use the AutoFocus Feeds integration to fetch indicators from AutoFocus.- test
 display: AutoFocus Feed
 name: AutoFocus Feed
 script:
