--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,13 +131,13 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk | cat)"
-                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk | cat)"
+                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep -c demisto_sdk)"
+                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep -c demisto_sdk)"
 
                   echo Pylint exit code on Test directory: $pylint_test_result
                   echo Pylint exit code on Utils directory: $pylint_utils_result
 
-                  if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
+                  if [ $pylint_test_result -ne 0 ] || [ $pylint_utils_result -ne 0 ] ; then
                       echo Pylint exit code on Test directory: $pylint_test_result
                       echo Pylint exit code on Utils directory:$pylint_utils_result
                       exit 1
