--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,8 +130,7 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-
-                  ./Tests/scripts/pylint.sh
+                  ./Tests/scripts/sdk_pylint_check.sh
             fi
             exit 0
       - run:
